--- a/restaurants/templates/cart.html
+++ b/restaurants/templates/cart.html
@@ -126,6 +126,10 @@
               name="price"
               value="{{items|total_amount:request.session.cart|currency}}"
             />
+
+            {% if request.session.cart|length > 0 %}
+            <input hidden type="text" name="restaurant" value="{{request.session.cart.keys|item_restaurant}}">
+            {% endif %}
             <input
               type="submit"
               value="Checkout"
