--- a/restaurants/templates/restaurants/order_list.html
+++ b/restaurants/templates/restaurants/order_list.html
@@ -31,6 +31,10 @@
 
                 {% for order in order_list %}
 
+                {% if order|is_not_pending %}
+
+
+
                 {% if order.items.first.restaurant|is_owner:request.user.full_name %}
                 <tr>
                     <td class="text-center">{{forloop.counter}}</td>
@@ -113,7 +117,7 @@
                 </td>
                 </tr>
                 {% endif %}
-
+                {% endif %}
             {% endfor %}
 
             </tbody>
