--- a/customers/templates/login.html
+++ b/customers/templates/login.html
@@ -1,7 +1,9 @@
-{% extends 'base.html' %} {% load crispy_forms_filters %} {% load
-crispy_forms_tags %} {% block title %}
+{% extends 'base.html' %}
+{% load crispy_forms_filters %} {% load crispy_forms_tags %}
+{% block title %}
 <title>Login</title>
-{% endblock title %} {% block content %}
+{% endblock title %}
+{% block content %}
 <div class="container">
   <div class="p-4 m-4">
     <div class="col-lg-5 mx-auto mt-5 border rounded pt-4 p-3">
